# arno_warehouse

./: .gitignore  README.md  SPEC.md  docker-compose.yml  test-100.js
01_models/: hook_templates.json
backend/: .env.example  Dockerfile  init_db.py  main.py  pyproject.toml  requirements.txt
backend/alembic/versions/: 002_add_user_isolation.py  003_assign_existing_data_to_user.py  004_add_template_user_id.py  005_add_script_platform.py  006_fix_platform_enum_values.py
backend/api/v1/: api.py
backend/api/v1/endpoints/: achievement.py  auth.py  questions.py
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  auth.py  dependencies.py  materials.py  publishing.py  scripts.py  templates.py  videos.py
backend/app/core/: config.py  database.py  id_generator.py  security.py
backend/app/models/: material.py  publishing.py  script.py  template.py  user.py  video.py
backend/app/schemas/: material.py  publishing.py  script.py  template.py  video.py
backend/app/services/: material_uploader.py  script_generator.py
backend/core/: config.py  security.py
backend/models/: achievement.py  question.py  user.py
backend/schemas/: achievement.py  question.py  user.py
backend/tests/: test_scripts_api.py
docs/: UI草稿_v1.md  UI草稿_v2.md  UI草稿_v3.md  UI草稿_v4.md  原型设计.md  开发计划.md  批量生成系统方案.md  技术方案细化.md  竞品分析.md  竞品用户体验分析.md  行业模板库需求.md  跨平台分发方案.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  App.tsx  (+2 more)
mobile/: README.md  pubspec.yaml
tasks/: DOCKER_RESTART.md  LOG.md
(+54 files in other folders)
